# bevy_workshop-rustweek-2025

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy.yml  docker.yml
assets/: jet.particle.ron  level.bw  starfield.wgsl
bevy-workshop/: book.toml
bevy-workshop/src/: SUMMARY.md  enemies.md  next_bevy.md  next_game.md  platforms.md  setup.md  target.md  welcome.md
bevy-workshop/src/0-terms/: bevy.md  ecs.md  index.md
bevy-workshop/src/1-intro/: application.md  exercises.md  index.md  plugins.md  progress.md  states.md  systems.md  updating.md
bevy-workshop/src/2-basics/: actual-physics.md  assets.md  controls.md  display.md  exercises1.md  exercises2.md  index.md  physics.md  progress.md
bevy-workshop/src/3-level/: display.md  exercises.md  index.md  loading.md  progress.md
bevy-workshop/src/4-actions/: actions.md  exercises.md  exercises2.md  index.md  progress.md  winning.md  wrapping.md
bevy-workshop/src/5-sound/: exercises.md  firing.md  index.md  progress.md
bevy-workshop/src/6-visuals/: background.md  bloom.md  exercises.md  index.md  particles.md  progress.md
bevy-workshop/theme/: header.hbs
src/: audio.rs  game.rs  hud.rs  level.rs  main.rs  rapier_events.rs  splash.rs  starfield.rs  start_menu.rs  won.rs
wasm/: index.html
