[package]
name = "bevy_workshop-rustweek-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_state", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "multi_threaded", "bevy_gizmos", "wav", "png", "x11", "wayland", "webgl2"] }
